--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,6 +1,7 @@
 .mat-toolbar-row {
   display: flex;
   align-items: center; /* Alignement vertical au centre */
+
 }
 
 .centered-items {
@@ -16,7 +17,8 @@
   flex: 1; /* Crée un espace flexible entre les éléments */
 }
 .title_style{
-  font-size:xx-large;
+
+  font-size:200%;
   font-family: "Comic Sans MS";
   font-weight: bold;
   color: orange;
@@ -25,6 +27,7 @@
 }
 
 .mat-toolbar {
-  background-color:#f2f1f3;
-  border-bottom: wheat medium 1px;
+  min-height:100px;
+  background-color:white;
+  border-bottom: solid #32a1ce 1px ;
 }
