--- a/src/app/body/users-update-proposal/users-update-proposal.component.css
+++ b/src/app/body/users-update-proposal/users-update-proposal.component.css
@@ -24,8 +24,13 @@
   font-size: 14px;
   flex-grow: 1;
   flex-basis: 0;
+  max-width: 20%;
 }
 
+.center {
+  text-align: center;
+  /*  border: 1px solid green;*/
+}
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
@@ -48,4 +53,5 @@
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+
 }
