--- a/src/app/body/users-update-proposal/users-update-proposal.component.html
+++ b/src/app/body/users-update-proposal/users-update-proposal.component.html
@@ -1,5 +1,5 @@
-<div class="container align-items-center justify-content-center">
-  <h1 class="color:success">Modifier la proposition pour l'offre:</h1>
+<div class="containe center">
+  <h1 class="text-info font-weight-bold">Modification de votre proposition à l'offre :</h1>
   <h1>{{loadedOffer?.title}}</h1>
   <p>{{loadedOffer?.description}}</p>
 </div>
@@ -10,7 +10,6 @@
       <mat-card-header>
         <mat-card-title-group>
           <mat-card-title>{{item?.title}}</mat-card-title>
-          <mat-card-subtitle>{{item?.id}}</mat-card-subtitle>
 
           <img mat-card-md-image [src]="item?.photos[0]?.url"  [alt]="item?.photos[0]?.title">
         </mat-card-title-group>
@@ -20,7 +19,7 @@
         <mat-divider></mat-divider>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-button >Details</button>
+        <button mat-button (click)="onDetailsItem(item)" >Details</button>
       </mat-card-actions>
       <mat-card-footer>
 
@@ -46,7 +45,10 @@
         class="example-list"
         (cdkDropListDropped)="drop($event)">
 
-        <div class="example-box bg-success" *ngFor="let item of proposedItems" cdkDrag>{{item.title}}</div>
+        <div class="example-box bg-success" *ngFor="let item of proposedItems" cdkDrag>
+          <p>{{item.title}}</p>
+          <img mat-card-md-image [src]="item?.photos[0]?.url" >
+        </div>
       </div>
     </div>
   </div>
@@ -65,7 +67,10 @@
         class="example-list"
         (cdkDropListDropped)="drop($event)">
 
-        <div class="example-box bg-primary " *ngFor="let item of allUsersItems" cdkDrag>{{item.title}}</div>
+        <div class="example-box bg-primary " *ngFor="let item of allUsersItems" cdkDrag>
+          <p>{{item.title}}</p>
+          <img mat-card-md-image [src]="item?.photos[0]?.url" >
+        </div>
       </div>
     </div>
     <div class="example-button-row">
