--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,32 +3,42 @@
 
     <mat-menu #menu="matMenu">
       <button mat-menu-item [routerLink]="['/user/offers-management']">
-        <mat-icon>dialpad</mat-icon>
+        <mat-icon>local_offer</mat-icon>
         <span>Mes Offres</span>
       </button>
       <button mat-menu-item [routerLink]="['/user/items-management']">
-        <mat-icon>dialpad</mat-icon>
+        <mat-icon>shopping_cart</mat-icon>
         <span>Items</span>
       </button>
       <button mat-menu-item [routerLink]="['/user/proposales-management']">
-        <mat-icon>dialpad</mat-icon>
+        <mat-icon>campaign</mat-icon>
         <span>Mes propositions</span>
       </button>
 
       <button mat-menu-item [routerLink]="['/user/contracts-management']">
-        <mat-icon>dialpad</mat-icon>
+        <mat-icon>assignment</mat-icon>
         <span>Mes Contrats</span>
       </button>
 
+      <button mat-menu-item [routerLink]="['/user/profile-management']"  >
+        <mat-icon>person</mat-icon>
+        <span>Profile</span>
+      </button>
+      <button mat-menu-item [routerLink]="['/user/profile-management']"  >
+        <mat-icon>lock</mat-icon>
+        <span>Changer le mot de passe</span>
+      </button>
+
+
 
       <button mat-menu-item (click)="onLogout()">
-        <mat-icon>dialpad</mat-icon>
+        <mat-icon>exit_to_app</mat-icon>
         <span>Deconnexion</span>
       </button>
     </mat-menu>
 
-    <span class="centered-items">
-          <span class="title_style" [routerLink]="['/public/home']">MoKaYaDa</span>
+    <span class="centered-items" style="vertical-align: middle;">
+          <p class="title_style" [routerLink]="['/public/home']">MoKaYaDa</p>
 
     </span>
 
