--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
   <div class="row">
     <div class="col-md-4 offset-md-4 col-sm-8 offset-sm-2 form-group">
-      <label for="exampleInputEmail1">Nom d'utilisateur</label>
+      <label for="exampleInputEmail1" class="font-weight-bold">Nom d'utilisateur</label>
       <input type="email" class="form-control" id="exampleInputEmail1" formControlName="username"
              placeholder="Nom d'utilisateur"
              [ngClass]="{ 'is-invalid': (form.controls.username.invalid && (form.controls.username.dirty || form.controls.username.touched)) }">
@@ -16,11 +16,10 @@
   </div>
   <div class="row">
     <div class="col-md-4 offset-md-4 col-sm-8 offset-sm-2 form-group">
-      <label for="exampleInputPassword1">Mot de passe</label>
+      <label for="exampleInputPassword1" class="font-weight-bold">Mot de passe</label>
       <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Mot de passe"
              formControlName="password"
              [ngClass]="{ 'is-invalid': (form.controls.password.invalid && (form.controls.password.dirty || form.controls.password.touched)) }">
-      <span class="floating-label">Your email address</span>
       <div class="invalid-feedback"
            *ngIf="form.controls.password.invalid && (form.controls.password.dirty || form.controls.password.touched)">
 
@@ -30,10 +29,10 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-4 offset-4 form-check">
+  <!--  <div class="col-4 offset-4 form-check">
       <input type="checkbox" class="form-check-input" id="exampleCheck1">
       <label class="form-check-label" for="exampleCheck1">Rester connecté</label>
-    </div>
+    </div>-->
   </div>
   <div class="row">
     <div class="col-2 offset-5 form-check" style="text-align:center">
