--- a/src/app/public/subscribe/subscribe.component.html
+++ b/src/app/public/subscribe/subscribe.component.html
@@ -7,7 +7,7 @@
 <mat-stepper orientation="vertical" [linear]="isLinear" #stepper>
   <mat-step [stepControl]="formInfo">
     <form [formGroup]="formInfo">
-      <ng-template matStepLabel>Information Personelles</ng-template>
+      <ng-template matStepLabel>Informations Personnelles</ng-template>
       <div class="row">
       <mat-form-field>
         <mat-label>Prénom</mat-label>
@@ -151,7 +151,7 @@
       <button mat-button matStepperPrevious>Retour</button>
 <!--      <button mat-button (click)="stepper.reset()">Réinitialiser</button>-->
 
-      <button mat-button  [disabled]="!formAuth.valid || !formContact.valid || !formAuth.valid " (click)="onSubscibe()">Envoyer</button>
+      <button mat-button  [disabled]="!formInfo.valid || !formContact.valid || !formAuth.valid " (click)="onSubscibe()">Envoyer</button>
     </div>
   </mat-step>
 </mat-stepper>
