--- a/src/app/user/users-items-management/users-add-item/users-add-item.component.html
+++ b/src/app/user/users-items-management/users-add-item/users-add-item.component.html
@@ -54,8 +54,12 @@
         <div class="row">
           <div class="col-md-2 productAddfromImages" *ngFor='let url of imageurls; let i = index'>
             <img class="img-thumbnail" [src]="url.base64String">
-            <a (click)="removeImage(i)" class="btn btn-xs btn-danger">Supprimer</a>
-            <a (click)="maximizeImage(url.base64String)" class="btn btn-xs btn-primary">maximiser</a>
+            <button mat-mini-fab color="warn"  aria-label="Example icon button with a home icon" (click)="removeImage(i)">
+              <mat-icon>delete_forever</mat-icon>
+            </button>
+            <button mat-mini-fab color="primary" aria-label="Example icon button with a home icon" (click)="maximizeImage(url.base64String) ">
+              <mat-icon>image_search</mat-icon>
+            </button>
           </div>
         </div>
       </div>
