--- a/src/app/user/users-items-management/users-details-item/users-details-item.component.html
+++ b/src/app/user/users-items-management/users-details-item/users-details-item.component.html
@@ -61,14 +61,23 @@
         <div class="row">
           <div class="col-md-2 productAddfromImages" *ngFor='let photo of currentPhotos; let i = index'>
             <img class="img-thumbnail" [src]="photo.url">
-            <a (click)="removeLoadedImage(i,photo)" class="btn btn-xs btn-danger">Supprimer</a>
-            <a (click)="maximizeImage(photo.url)" class="btn btn-xs btn-primary">maximiser</a>
+
+            <button mat-mini-fab color="warn"  aria-label="Example icon button with a home icon" (click)="removeLoadedImage(i,photo)">
+              <mat-icon>delete_forever</mat-icon>
+            </button>
+            <button mat-mini-fab color="primary" aria-label="Example icon button with a home icon" ((click)="maximizeImage(photo.url)">
+              <mat-icon>image_search</mat-icon>
+            </button>
           </div>
 
           <div class="col-md-2 productAddfromImages" *ngFor='let url of imageurls; let i = index'>
             <img class="img-thumbnail" [src]="url.base64String">
-            <a (click)="removeImage(i)" class="btn btn-xs btn-danger">Supprimer</a>
-            <a (click)="maximizeImage(url.base64String)" class="btn btn-xs btn-primary">maximiser</a>
+            <button mat-mini-fab color="warn"  aria-label="Example icon button with a home icon" (click)="removeImage(i)">
+              <mat-icon>delete_forever</mat-icon>
+            </button>
+            <button mat-mini-fab color="primary" aria-label="Example icon button with a home icon" (click)="maximizeImage(url.base64String) ">
+              <mat-icon>image_search</mat-icon>
+            </button>
           </div>
         </div>
       </div>
