--- a/src/app/user/users-offers-management/users-offers-management.component.css
+++ b/src/app/user/users-offers-management/users-offers-management.component.css
@@ -68,3 +68,12 @@ mat-form-field {
   display: block;
 }
 
+.icon-container {
+  width: 40px; /* Adjust the width and height as needed */
+  height: 40px;
+}
+
+.icon {
+  width: 100%;
+  height: auto;
+}
